updated the project

--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Main Dishes in Lebanon!</title>
+      <link href="styles.css" type="text/css" rel="stylesheet" >
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+      <header class="padding" id="mainHeading">
+         <h1><em>The 4 Main Dishes in Lebanon</em></h1>
+         <main>
+            <b>The Lebanese</b> cuisine is the culinary traditions and practices originating from Lebanon. 
+            It includes an abundance of whole grains, fruits, vegetables, fresh fish and seafood. Poultry is eaten more often than red meat, 
+            and when red meat is eaten, it is usually lamb and goat meat.
+            
+         </main>
+         <br><br>
+         <article><b>Wiki-</b> The lebanese cuisine has ancient roots and is part of the culinary tradition of the Eastern Mediterranean.
+             Many dishes in Lebanese cuisine can be traced back thousands of years to eras of Phoenician, Persian, Egyptian, Neo-Babylonian, Roman, Greek, Byzantine, Arab and Ottoman rule.
+             In the last 500 years, Lebanese cuisine has been influenced by the different foreign civilizations that held power</article>
+            </header>
+            <h3>1. Parsley Bulgur Salad</h3>
+            <img src="410_11.jpg.webp" width="700" 
+            height="500">
+            <p id="testP" class="funParagraph" > the Parsley Bulgur Salad is a unique Lebanese salad, made of fresh parsley and mint, a handful of bulgur, finely chopped tomatoes, and onions, with a drizzle of lemon juice and olive oil.
+               Its traditionally served with Lebanese mezze (a spread of appetizers) and is very popular to eat at all times of the day.</p>
+            </body>
+
+            <h3>2. Hummus - Chickpea Dip</h3>
+            <img src="lebanese-food-4.jpg.webp" width="700" 
+            height="500">
+            <p class="padding">Hummus is one of the most popular and beloved dishes from the Levantine region in the world.
+
+               Traditionally, hummus is a dip made of chickpeas, tahini paste, lemon juice, and a sprinkle of garlic.
+               It’s a delicious savory dish that can be eaten with so many foods. You can eat it as a side dish with grilled meat or chicken platters, dip raw or cooked vegetables in it, or spread it on many types of bread.</p>
+
+               <h3>3. Lebanese Meat Pizza</h3>
+         <img src="lebanese-food-7.jpg.webp"width="700" 
+         height="500">
+         <p class="padding">Lahm Bi Ajin is very similar to Man’ouche, in that it utilizes a hearty, crunchy dough-base.
+            Lahm Bi Ajin however are smaller, and circular in shape. It’s topped with a mixture of minced meat, onions, and parsley, then cooked in an open oven until crunchy.
+            Lahm Bi Ajin can also be cut into squares. This variation is known as “Sfiha”.
+            <div class="styling"><b>Hot tip:</b> There are many forms of Lahm bi Ajin in Lebanon, depending on the region you are in.</div>
+         </p>
+           <h3>4. Lebanese Purse Bread</h3>
+           <img src="lebanese-food-8.jpg.webp"width="700" 
+           height="700">
+           <p class="padding">The Lebanese Purse Bread is a type of flatbread dough. It’s rolled into oval pieces, and baked at a high heat over an open flame until crispy on the outside.
+            Once cooked, it’s sprinkled with sesame seeds. This enhances the taste, and it intensifies the crispy texture.
+            Some call it Lebanese Purse Bread, as it often resembles the shape of a purse, due to the hole formed at the top to hang it while cooling it.
+            It is a very common street food in Lebanon. Traditionally, it's enjoyed topped with a generous helping of cheese and thyme.</p>
+            <footer><small>&copy; Yahya</small>
+               <small>Contact me at Yahya@Lebanon.com</small></footer>
+         </body>
 </html>
